@@ -1,6 +1,7 @@
 2010-05-09 Holger Vogt
  * inpcom.c: patch 09/05/10 by Robert
  * spinit.in: add ngbehavior
+ * inpptree.c: derivatives for fcns min and max
 
 2010-05-08 Holger Vogt
  * inpcom.c: patch 02/05/10 by Robert: avoid subtraction from a builtin 1.0
